--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,9 @@
 {
-    "tabWidth": 4,
-    "semi": false,
+    "trailingComma": "all",
+    "tabWidth": 2,
+    "printWidth": 120,
+    "semi": true,
+    "arrowParens": "avoid",
     "singleQuote": true
-}
+  }
+  
