--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "start": "node ./build/index.js",
     "build": "babel -d build/ src",
     "dev": "nodemon --exec npx babel-node src/index.js",
-    "prettier": "prettier --config ./.prettierrc --write \"**/*.js\"",
+    "format": "prettier --write --single-quote --print-width=120 --tab-width=2 \"src/**/*.js\"",
     "pretest": "eslint --ignore-path .gitignore .",
-    "lint": "yarn prettier "
+    "lint": "eslint **/**"
   },
   "author": "Olusola Samuel",
   "license": "MIT",
